--- a/BookRide/src/main/resources/templates/admin/index.html
+++ b/BookRide/src/main/resources/templates/admin/index.html
@@ -210,7 +210,8 @@
                     <a class="list-group-item redirect-list" href="./car_status_search.html">Cars Status</a>
                     <a class="list-group-item redirect-list" href="./customer_res_search.html">Customer Reservations</a>
                     <a class="list-group-item redirect-list" href="./car_res_search.html">Car Reservations</a>
-                    <a class="list-group-item redirect-list" href="./addcar.html">Add New Car</a>
+                    <a class="list-group-item redirect-list" href="/admin/loadAddProduct">Add New Car</a>
+                      <a class="list-group-item redirect-list" href="/admin/category">Add New category</a>
                     <a class="list-group-item redirect-list" href="./office_home.html">Current Reservations</a>
                     <a class="list-group-item redirect-list" href="./office_home.html">add admin</a>
                     <a class="list-group-item redirect-list" href="./office_home.html">admins</a>
