--- a/BookRide/src/main/resources/templates/view_product.html
+++ b/BookRide/src/main/resources/templates/view_product.html
@@ -146,6 +146,7 @@
       <a class="navbar-brand" href="#">BookMyRide <img src="./car.png" alt="Car"></a>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="/register">Sign up</a></li>
           <li class="nav-item"><a class="nav-link" href="/signin">Sign in</a></li>
         </ul>
