--- a/BookRide/src/main/resources/templates/index.html
+++ b/BookRide/src/main/resources/templates/index.html
@@ -162,8 +162,8 @@ body {
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav">
-					<li class="nav-item"><a class="nav-link" href="#"><i
-							class="fas fa-home"></i> Home</a></li>
+					<li class="nav-item"><a class="nav-link" href="/product"><i
+							class="fas fa-home"></i> search</a></li>
 					<li class="nav-item"><a class="nav-link" href="/products"><i
 							class="fas fa-box-open"></i> Products</a></li>
 					<li class="nav-item dropdown"><a
