--- a/BookRide/src/main/resources/templates/admin/index.html
+++ b/BookRide/src/main/resources/templates/admin/index.html
@@ -207,7 +207,7 @@
                 <ul class="list-group">
                     <a class="list-group-item redirect-list" href="./payment_report_search.html">Payments</a>
                     <a class="list-group-item redirect-list" href="./res_search.html">Reservations</a>
-                    <a class="list-group-item redirect-list" href="./car_status_search.html">Cars Status</a>
+                    <a class="list-group-item redirect-list" href="/admin/car_status">Cars Status</a>
                     <a class="list-group-item redirect-list" href="./customer_res_search.html">Customer Reservations</a>
                     <a class="list-group-item redirect-list" href="./car_res_search.html">Car Reservations</a>
                     <a class="list-group-item redirect-list" href="/admin/loadAddProduct">Add New Car</a>
