--- a/BookRide/src/main/resources/templates/admin/add_new_car.html
+++ b/BookRide/src/main/resources/templates/admin/add_new_car.html
@@ -228,7 +228,7 @@ body, html {
 				</div>
 
 				<div class="mb-3">
-					<label for="phone">Year</label> <input id="phone" type="date"
+					<label for="phone" >year</label> <input id="phone" type="date"
 						class="form-control" name="year" required>
 				</div>
 				<div class="mb-3">
@@ -299,7 +299,7 @@ body, html {
 			<a href="/admin/" class="text-warning"> admin</a>
 		</div>
 		<div class="card-footer text-center">
-			<a href="/admin/car_status" class="text-warning">view Product</a>
+			<a href="/admin/car_status" class="text-warning">view Car status</a>
 		</div>
 	</div>
 
