--- a/BookRide/src/main/resources/templates/index.html
+++ b/BookRide/src/main/resources/templates/index.html
@@ -164,17 +164,16 @@ body {
 				<ul class="navbar-nav">
 					<li class="nav-item"><a class="nav-link" href="/product"><i
 							class="fas fa-home"></i> search</a></li>
-					<li class="nav-item"><a class="nav-link" href="/product"><i
+					<li class="nav-item"><a class="nav-link" href="/products"><i
 							class="fas fa-box-open"></i> Products</a></li>
-					<li class="nav-item dropdown"><a
-						class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
-						role="button" data-bs-toggle="dropdown" aria-expanded="false">
-							<i class="fas fa-th"></i> Categories
-					</a>
-						<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-							<li><a class="dropdown-item" href="#">Sedan</a></li>
-							<li><a class="dropdown-item" href="#">SUV</a></li>
-							<li><a class="dropdown-item" href="#">Luxury</a></li>
+						<li class="nav-item dropdown"><a
+						class="nav-link dropdown-toggle" href="#" role="button"
+						data-bs-toggle="dropdown" aria-expanded="false"><i
+							class="fa-solid fa-layer-group text-primary"></i> Category </a>
+						<ul class="dropdown-menu bg-info shadow-lg">
+							<li th:each="c:${categorys}"><a class="dropdown-item"
+								th:href="@{'/products?category='+${c.name}}">[[${c.name}]]</a></li>
+
 						</ul></li>
 				</ul>
 				<ul class="navbar-nav ms-auto">
