--- a/BookRide/src/main/resources/templates/login.html
+++ b/BookRide/src/main/resources/templates/login.html
@@ -172,6 +172,28 @@
             <p class="fs-4">Login</p>
         </div>
 
+
+                                                        <div th:if="${param.error}"
+														class="alert alert-danger text-center">
+
+														<th:block
+															th:if="${session.SPRING_SECURITY_LAST_EXCEPTION!=null}">
+									                          [[${session.SPRING_SECURITY_LAST_EXCEPTION.message}]]
+								                                </th:block>
+
+
+
+													</div>
+
+													<div th:if="${param.logout}" class="alert alert-success text-center">
+														Logout Sucessfully</div>
+														
+														
+														
+														
+													
+
+
         <div class="card-body bg-light p-4">
             <form action="/login" method="post">
                 <div class="mb-3">
