--- a/BookRide/src/main/resources/templates/admin/index.html
+++ b/BookRide/src/main/resources/templates/admin/index.html
@@ -8,6 +8,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles.css">
+    <link
+	href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@300;500&display=swap"
+	rel="stylesheet">
+<link rel="stylesheet"
+	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+	
     <style>
         /* General Styling */
         body {
@@ -192,7 +200,8 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mb-2 mb-lg-0 ms-auto">
                     <li class="nav-item">
-                        <h1 class="display-6">Admin</h1>
+                        <h1 class="display-6"><i
+								class="fa-solid fa-user"></i>[[${user.firstName}]]</h1>
                     </li>
                 </ul>
             </div>
@@ -261,7 +270,7 @@
                     <a class="list-group-item redirect-list" href="./advancesearch.html">Advanced Search</a>
                 </ul>
                 <div class="padd-up2">
-                    <a href="./index.html" class="btn btn-outline-danger logout-button">Log Out</a>
+                    <a href="/logout" class="btn btn-outline-danger logout-button">Log Out</a>
                 </div>
             </div>
         </div>
