--- a/BookRide/src/main/resources/templates/index.html
+++ b/BookRide/src/main/resources/templates/index.html
@@ -15,6 +15,9 @@
 	rel="stylesheet">
 <link rel="stylesheet"
 	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+	
 <style>
 body {
 	font-family: 'Montserrat', sans-serif;
@@ -162,11 +165,14 @@ body {
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav">
-					<li class="nav-item"><a class="nav-link" href="/product"><i
-							class="fas fa-home"></i> search</a></li>
+					
 					<li class="nav-item"><a class="nav-link" href="/products"><i
 							class="fas fa-box-open"></i> Products</a></li>
-						<li class="nav-item dropdown"><a
+						
+   
+   
+<!-- Example single danger button -->
+<li class="nav-item dropdown"><a
 						class="nav-link dropdown-toggle" href="#" role="button"
 						data-bs-toggle="dropdown" aria-expanded="false"><i
 							class="fa-solid fa-layer-group text-primary"></i> Category </a>
@@ -175,18 +181,58 @@ body {
 								th:href="@{'/products?category='+${c.name}}">[[${c.name}]]</a></li>
 
 						</ul></li>
+
 				</ul>
 				<ul class="navbar-nav ms-auto">
+				
+				
+				<th:block th:if="${user==null}">
 					<li class="nav-item"><a class="nav-link" href="/register"><i
 							class="fas fa-user-plus"></i> Sign up</a></li>
 					<li class="nav-item"><a class="nav-link" href="/signin"><i
 							class="fas fa-sign-in-alt"></i> Sign in</a></li>
+							
+									
 					<li class="nav-item"><a class="nav-link" href="#cta"><i
 							class="fas fa-star"></i> Ratings</a></li>
 					<li class="nav-item"><a class="nav-link" href="#features"><i
 							class="fas fa-cogs"></i> Features</a></li>
 					<li class="nav-item"><a class="nav-link" href="#footer"><i
 							class="fas fa-envelope"></i> Contact us</a></li>
+						</th:block>	
+							
+							
+							<th:block th:if="${user!=null}">
+							<li class="nav-item"><a class="nav-link" href="#cta"><i
+							class="fas fa-star"></i> Ratings</a></li>
+					<li class="nav-item"><a class="nav-link" href="#features"><i
+							class="fas fa-cogs"></i> Features</a></li>
+					<li class="nav-item"><a class="nav-link" href="#footer"><i
+							class="fas fa-envelope"></i> Contact us</a></li>
+							
+							<li class="nav-item dropdown"><a
+							class="nav-link dropdown-toggle active" href="#" role="button"
+							data-bs-toggle="dropdown" aria-expanded="false"> <i
+								class="fa-solid fa-user"></i> [[${user.firstName}]]
+						</a>
+							<ul class="dropdown-menu">
+								<a
+									class="dropdown-item" href="/user/profile">Profile</a>
+
+								<a
+									class="dropdown-item" href="/user/feedback">Feedback</a>
+
+								<a
+									class="dropdown-item" href="/user/user-orders">My Orders</a>
+								<li><a class="dropdown-item" href="/logout">Logout</a></li>
+								<li><hr class="dropdown-divider"></li>
+
+							</ul></li>
+						</th:block>	
+							
+							
+							
+					
 				</ul>
 			</div>
 		</div>
