--- a/BookRide/src/main/resources/templates/product.html
+++ b/BookRide/src/main/resources/templates/product.html
@@ -164,9 +164,18 @@
       <a class="navbar-brand" href="/">BookMyRide <img src="img" alt="Car"></a>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
+        <th:block th:if="${user==null}">
           <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="/register">Sign up</a></li>
           <li class="nav-item"><a class="nav-link" href="/signin">Sign in</a></li>
+          
+          </th:block>
+          
+           <th:block th:if="${user!=null}">
+          <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+         <li class="nav-item"><a class="nav-link" href="#"><i
+							class="fas fa-user-plus"></i>[[${user.firstName}]]</a></li>
+          </th:block>
         </ul>
       </div>
     </div>
