--- a/BookRide/src/main/resources/templates/feedback.html
+++ b/BookRide/src/main/resources/templates/feedback.html
@@ -113,23 +113,32 @@
 <body>
   <div class="feedback-container">
     <h1>Feedback Form</h1>
-    <form action="/submit-feedback" method="POST">
+    
+    <th:block th:if="${session.succMsg}">
+    <p class="text-warning fw-bold">[[${session.succMsg}]]</p>
+    <th:block th:remove="all"></th:block>
+</th:block>
+
+<th:block th:if="${session.errorMsg}">
+    <p class="text-danger fw-bold">[[${session.errorMsg}]]</p>
+    <th:block th:remove="all"></th:block>
+</th:block>
+
+   <form action="/saveFeedback"  method="post">
       <label for="name">Full Name:</label>
-      <input type="text" id="name" name="name" placeholder="Enter your name" required>
+      <input type="text" id="name" name="fullName" placeholder="Enter your name" required>
 
       <label for="email">Email:</label>
       <input type="email" id="email" name="email" placeholder="Enter your email" required>
 
-      <label for="feedback">Your Feedback:</label>
-      <textarea id="feedback" name="feedback" placeholder="Write your feedback here..." required></textarea>
+      <label for="name">short description for feedback</label>
+      <input type="text" id="name" name="description" placeholder="Enter your name" required>
 
       <label>Rating:</label>
       <div class="rating">
-        <label><input type="radio" name="rating" value="1"> 1</label>
-        <label><input type="radio" name="rating" value="2"> 2</label>
-        <label><input type="radio" name="rating" value="3"> 3</label>
-        <label><input type="radio" name="rating" value="4"> 4</label>
-        <label><input type="radio" name="rating" value="5"> 5</label>
+        <label><input type="number" name="rating" min="1" max="5" placeholder="3" required>
+ </label>
+       
       </div>
 
       <button type="submit">Submit Feedback</button>
