--- a/BookRide/src/main/resources/templates/admin/index.html
+++ b/BookRide/src/main/resources/templates/admin/index.html
@@ -221,7 +221,8 @@
                     <a class="list-group-item redirect-list" href="./car_res_search.html">Car Reservations</a>
                     <a class="list-group-item redirect-list" href="/admin/loadAddProduct">Add New Car</a>
                       <a class="list-group-item redirect-list" href="/admin/category">Add New category</a>
-                    <a class="list-group-item redirect-list" href="./office_home.html">Current Reservations</a>
+                    <a class="list-group-item redirect-list" href="#">Current Reservations</a>
+                     <a class="list-group-item redirect-list" href="/admin/users">User deatils</a>
                     <a class="list-group-item redirect-list" href="./office_home.html">add admin</a>
                     <a class="list-group-item redirect-list" href="./office_home.html">admins</a>
                 </ul>
