--- a/BookRide/src/main/resources/templates/login.html
+++ b/BookRide/src/main/resources/templates/login.html
@@ -161,6 +161,10 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/register"><i class="fas fa-sign-in-alt"></i> Signup</a>
                     </li>
+                    
+                    <li class="nav-item">
+                        <a class="nav-link" href="/signin"><i class="fas fa-sign-in-alt"></i> Signin</a>
+                    </li>
                 </ul>
             </div>
         </div>
