--- a/BookRide/src/main/resources/templates/register.html
+++ b/BookRide/src/main/resources/templates/register.html
@@ -177,6 +177,10 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/signin"><i class="fas fa-sign-in-alt"></i> Sign In</a>
                     </li>
+                    
+                      <li class="nav-item">
+                        <a class="nav-link" href="/register"><i class="fas fa-sign-in-alt"></i> Sign up</a>
+                    </li>
                 </ul>
             </div>
         </div>
